nginx-app/nginx-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-app
  name: nginx-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-app
  type: ClusterIP
